# cubi-frontend

./: .gitignore  CLAUDE.md  LICENSE  PRD.md  README.md  TASK-023-05-VERIFICATION.md  index.html  package-lock.json  package.json  run-dev.ps1  tsconfig.app.json  tsconfig.node.json  vite.config.ts
src-tauri/: Cargo.toml  check_output.txt  tauri.conf.json  temp_error.txt  temp_error2.txt
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: catalog.rs  config.rs  emulator_commands.rs  emulator_settings.rs  flash_mapping.rs  input_mapping.rs  launcher.rs  library.rs  media.rs  metadata_editor.rs  mod.rs  pc_games.rs  pc_scraper.rs  rgsx.rs  rom_paths.rs  scanner.rs  scraper.rs  steam_integration.rs  system_wiki.rs  verification.rs
src-tauri/src/db/: mod.rs  schema.rs
src-tauri/src/models/: catalog.rs  config.rs  emulator.rs  emulator_settings.rs  flash_mapping.rs  game.rs  input_mapping.rs  media.rs  mod.rs  rgsx.rs  scraper.rs  steam.rs  system.rs  system_wiki.rs
src-tauri/src/services/: bluestacks_detector.rs  catalog_service.rs  config_service.rs  downloader_service.rs  emulator_hotkey_service.rs  emulator_settings_service.rs  epic_cloud_service.rs  flash_input_service.rs  gamelist_service.rs  gog_cloud_service.rs  igdb_service.rs  input_mapping_service.rs  launcher_service.rs  libretro.rs  media_import_service.rs  media_service.rs  mobygames_service.rs  mod.rs  pc_import_service.rs  pc_metadata_orchestrator.rs  pcgamingwiki_service.rs  ps3_service.rs  (+15 more)
(+331 files in other folders)
