[package]
name = "cubi-frontend"
version = "0.15.0"
edition = "2021"

[lib]
name = "cubi_frontend_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset", "devtools"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
rusqlite = { version = "0.31", features = ["bundled"] }
walkdir = "2"
tokio = { version = "1", features = ["full"] }
blake3 = "1"
quick-xml = "0.36"
directories = "5"
dirs = "5"
thiserror = "2"
log = "0.4"
env_logger = "0.11"
chrono = { version = "0.4", features = ["serde"] }
which = "7"
reqwest = { version = "0.12", features = ["stream", "json"] }
futures = "0.3"
percent-encoding = "2"
uuid = { version = "1", features = ["v4"] }
scraper = "0.20"
url = "2"
zip = "2"

[target.'cfg(windows)'.dependencies]
winreg = "0.52"
winapi = { version = "0.3", features = ["xinput", "winuser", "impl-default"] }

[profile.release]
opt-level = 3
strip = true
lto = true
codegen-units = 1
panic = "abort"

[profile.dev]
incremental = true
